maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:3: error: not found: value estSurbiscuit
    while(!estSurbiscuit)
           ^