maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while(!estSurbiscuit)
    {
    		while(estFaceMur)
    		{
    			gauche()
    		}
    		avance()
    		
    }
}
